# jetson_ui

./: .gitignore  README.md  deploy_ui.yml  main.py  pyproject.toml  sonoplast.kv  sonoplast.py  sync_repos.sh
